--- a/views/new-index.ejs
+++ b/views/new-index.ejs
@@ -5,77 +5,98 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IM Tavla</title>
-      <link rel="icon" type="image/x-icon" href="https://cdn.discordapp.com/emojis/880802613212377129.webp?size=240&quality=lossless">
+    <link rel="stylesheet" href="/main.css">
+    <link rel="icon" type="image/x-icon" href="https://cdn.discordapp.com/emojis/880802613212377129.webp?size=240&quality=lossless">
 
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
 </head>
 <body style="background-color: #303030;">
-    <h1 style="color: white; text-align: center; font-size: 500%; font-weight: 500; margin-top: 1%; margin-bottom: 1%;">
-      IM Tavla
-    </h1>
-    <div class="chantina" style="float: right; margin-right: 43%; margin-left: 3.3%; text-align: center; color: white;">
-      <h2 style="color: white; font-size: 300%; font-weight: 400;">Chantina.no</h2>
-      <h3 style="font-size: 200%;">I dag:</h3>
-      <p id="dagensmat" style="font-size: 300%;">
-        Pizza 30,-
-      </p>
-      <div id="matkalender" class="container" style="font-size: 130%;">
-        <div class="row">
-          <div class="col">
-            Mandag:
-          </div>
-          <div class="col-7">
-            Våruller og sprø pommes 13,- hg
-          </div>
+  <h1 style="color: white; text-align: center; font-size: 500%; font-weight: 500; margin-top: 1%; margin-bottom: 1%;">
+    IM Tavla
+  </h1>
+  <h2 id="clock" style="float: right; margin-right: 10%; margin-left: 3.3%; text-align: center; color: white; font-size: 400%; font-weight: 400;">
+    12:40
+  </h2>
+  <h2 style="color: white; text-align: left;margin-left: 3.3%; font-size: 400%; font-weight: 400;">Været</h2>
+  <p id="weather" style="color: white; font-size: 200%; margin-left: 3.3%; margin-top: 0.5%; font-weight: 350; margin-bottom: 3%;">
+    2°
+    <br>
+    Sludd
+    <br>
+    6m/s 
+    <br>
+    Opphold neste 90 min
+  </p>
+  <div class="chantina" style="float: right; margin-right: 43%; margin-left: 3.3%; text-align: center; color: white;">
+    <h2 style="color: white; font-size: 300%; font-weight: 400;">Chantina.no</h2>
+    <h3 style="font-size: 200%;">I dag:</h3>
+    <p id="dagensmat" style="font-size: 300%;">
+      Pizza 30,-
+    </p>
+    <div id="matkalender" class="container" style="font-size: 130%;">
+      <div class="row">
+        <div class="col">
+          Mandag:
         </div>
-        <div class="row">
-          <div class="col">
-            Tirsdag:
-          </div>
-          <div class="col-7">
-            Lasagne 13,- hg
-          </div>
+        <div class="col-7">
+          Våruller og sprø pommes 13,- hg
         </div>
-        <div class="row">
-          <div class="col">
-            Onsdag:
-          </div>
-          <div class="col-7">
-            Fish`n chips 13,- hg
-          </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          Tirsdag:
         </div>
-        <div class="row">
-          <div class="col">
-            Torsdag:
-          </div>
-          <div class="col-7">
-            Pølsegrateng 13,- hg
-          </div>
+        <div class="col-7">
+          Lasagne 13,- hg
         </div>
-        <div class="row">
-          <div class="col">
-            Fredag:
-          </div>
-          <div class="col-7">
-            Pizza 30,- stk
-          </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          Onsdag:
+        </div>
+        <div class="col-7">
+          Fish`n chips 13,- hg
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          Torsdag:
+        </div>
+        <div class="col-7">
+          Pølsegrateng 13,- hg
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          Fredag:
+        </div>
+        <div class="col-7">
+          Pizza 30,- stk
         </div>
       </div>
     </div>
-    <h2 style="color: white; text-align: left;margin-left: 3.3%; font-size: 300%; font-weight: 400;">Været</h2>
-    <p id="weather" style="color: white; font-size: 200%; margin-left: 3.3%; margin-top: 0.5%; font-weight: 350; margin-bottom: 3%;">
-      2°
-      <br>
-      Sludd
-      <br>
-      6m/s 
-      <br>
-      Opphold neste 90 min
-    </p>
-    <h2 style="color: white; font-size: 300%; margin-left: 3.3%; margin-bottom: 2%; font-weight: 400;">Charlottenlund VGS</h1>
-    <div id="busstavla" class="container" style="color: white; margin-left: 3%;">
+  </div>
+  <h2 style="color: white; font-size: 300%; margin-left: 3.3%; margin-bottom: 2%; font-weight: 400;">Charlottenlund VGS</h1>
+  <div id="busstavla" class="container" style="color: white; margin-left: 3%;">
+      <div class="row" style="margin-bottom: 1%; font-size: 150%;">
+        <div class="col">
+          14 Strindheim
+        </div>
+        <div class="col-8">
+          10min
+        </div>
+      </div>
+      <div class="row" style="margin-bottom: 1%; font-size: 150%;">
+          <div class="col">
+            14 Tempe
+          </div>
+          <div class="col-8">
+            10min
+          </div>
+        </div>
         <div class="row" style="margin-bottom: 1%; font-size: 150%;">
           <div class="col">
             14 Strindheim
@@ -85,50 +106,75 @@
           </div>
         </div>
         <div class="row" style="margin-bottom: 1%; font-size: 150%;">
-            <div class="col">
-              14 Tempe
-            </div>
-            <div class="col-8">
-              10min
-            </div>
+          <div class="col">
+            14 Tempe
           </div>
-          <div class="row" style="margin-bottom: 1%; font-size: 150%;">
-            <div class="col">
-              14 Strindheim
-            </div>
-            <div class="col-8">
-              10min
-            </div>
+          <div class="col-8">
+            10min
           </div>
-          <div class="row" style="margin-bottom: 1%; font-size: 150%;">
-            <div class="col">
-              14 Tempe
-            </div>
-            <div class="col-8">
-              10min
-            </div>
+        </div>
+        <div class="row" style="margin-bottom: 1%; font-size: 150%;">
+          <div class="col">
+            14 Strindheim
           </div>
-          <div class="row" style="margin-bottom: 1%; font-size: 150%;">
-            <div class="col">
-              14 Strindheim
-            </div>
-            <div class="col-8">
-              10min
-            </div>
+          <div class="col-8">
+            10min
           </div>
+        </div>
+    </div>
+    <h2 style="color: white; font-size: 300%; margin-left: 3.3%; margin-bottom: 1%; font-weight: 400; margin-top: 2%;">
+      Ferier:
+    </h2>
+    <div class="container" style="color: white; margin-left: 3%;">
+      <div class="row" style="margin-bottom: 1%; font-size: 150%;">
+        <div class="col">
+          Vinterferie
+        </div>
+        <div id="vinterferie_countdown" class="col-9">
+          28 dager 10 timer 4 min 10 sek
+        </div>
       </div>
+      <div class="row" style="margin-bottom: 1%; font-size: 150%;">
+          <div class="col">
+            Påskeferie
+          </div>
+          <div id="paaskeferie_countdown" class="col-9">
+            28 dager 10 timer 4 min 10 sek
+          </div>
+        </div>
+        <div class="row" style="margin-bottom: 1%; font-size: 150%;">
+          <div class="col">
+            Sommerferie
+          </div>
+          <div id="sommerferie_countdown" class="col-9">
+            28 dager 10 timer 4 min 10 sek
+          </div>
+        </div>
 
-
-
+        <!--<div id="mainmodal">
+          <div class="modalconent">
+                <span class="breakingtitle">
+                  BREAKING NEWS
+                </span> 
+                <marquee class = "marquee" behavior="scroll" direction="left">
+                  Deal Done: Bilon moves from TV Producer to Junior Web Developer</marquee>
+              <button id="readmorebutton">Read more >></button>
+          </div>
+      </div>-->
+      
+     
       <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
       <script src="/busstavla.js"></script>
       <script src="/weatherdata.js"></script>
       <script src="/chantina.js"></script>
+      <script src="/ferier.js"></script>
+
 
       <script>
           bussTavla()
           weatherData()
           chantina()
+          ferier()
       </script>
 </body>
 </html>
