--- a/public/main.css
+++ b/public/main.css
@@ -5,3 +5,47 @@
 .container {
 
 }
+
+#mainmodal {
+    position: fixed;
+    font-family: Arial;
+    top: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.8);
+    z-index: 99999;
+    height: 100%;
+    width: 100%;
+    text-align: center;
+}
+.modalconent {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: #FFD700;
+    width: 100%;
+    padding: 50px;
+}
+
+.breakingtitle {
+	font-size: 50px;
+	background: black;
+	color: #FFD700;
+	padding: 10px;
+}
+
+#readmorebutton {
+	background: black;
+	color: #FFD700;
+	border-style: none;
+  padding: 20px;
+  font-size: 20px;
+}
+
+.marquee {
+	color: black;
+	letter-spacing: 2px;
+	font-weight: 700;
+	padding: 30px;
+	font-size: 40px;
+}
